게시글 상세보기

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,29 @@
-# 0. UTF-8 ?? (?? ????)
+# 0. UTF-8 설정 (한글 안 깨지게)
 server.servlet.encoding.charset=utf-8
 server.servlet.encoding.force=true
 
-# 1. DB ??
-# org? ???(??? ??), h2? DB, Driver? ???(??? ??)
+# 1. DB 연결
+# org는 패키지(소문자 시작), h2는 DB, Driver는 클래스(대문자 시작)
 spring.datasource.driver-class-name=org.h2.Driver
+# 데이터 베이스 연결 주소(url)
 spring.datasource.url=jdbc:h2:mem:test
+# 데이터베이스에 진입할 때 쓸 username
 spring.datasource.username=sa
 
-# 2. hibernate ?? (?? : @Entity? ???? ???? ??? ??)
-spring.jpa.hibernate.ddl-auto=create
-# DB ??? ????? log? ?? (??? ?)
+# 2. hibernate 세팅 (create의 조건 : 런타임때 @Entity가 붙어있는 클래스만 찾아서 생성)
+# ddl : 데이터 정의 언어
+# create인 경우 : 테이블 자동 생성 (h2는 서버 켜지면 테이블 생성됐다가 서버 꺼지면 테이블 없어짐(휘발성))
+spring.jpa.hibernate.ddl-auto=create  
+# DB 테이블 생성됐는지 log로 확인 (콘솔 출력)
 spring.jpa.show-sql=true
 
-# 3. ????? ??
+# 3. 더미데이터 세팅
+# 더미데이터의 위치(이 경우 data.sql 파일)
+# classpath를 이용해서 파일명을 적어놓으면 Spring이 알아서 resources에서 찾아내서 runtime때 실행함
 spring.sql.init.data-locations=classpath:db/data.sql
-# ??? ??, ???
+# 테이블 생성, 초기화
+# => h2 DB이기 때문에 타이밍에 문제 생김
+# Spring이 실행되고나서 data.sql을 먼저 찾아서 실행시키고 ddl-auto로 create하기 때문에
+# 데이터 초기화에 오류 발생
+# ddl-auto로 create 하고 나서 data.sql을 실행시키라고 굳이 작성해야함
 spring.jpa.defer-datasource-initialization=true
